--- a/index.html
+++ b/index.html
@@ -90,8 +90,7 @@
         <script type="text/javascript" src="js/jquery.js"></script>
         <script type="text/javascript" src="js/jquery-ui.js"></script>
         <script type="text/javascript" src="js/content.js"></script>
-        <script src="js/dart.js"></script>
-        <script type="application/dart" src="dart/main.dart"></script>
+        <script type="text/javascript" src="dart/main.dart.js"></script>
         <script>
             //show modal on clicking an appliance
             function showModalOnClick(){
